Fixed width on mobile (#358)

--- a/app/assets/stylesheets/src/ats/_quick_search.scss
+++ b/app/assets/stylesheets/src/ats/_quick_search.scss
@@ -1,13 +1,4 @@
-.mobile-quick-search-text-input {
-  .quick-search {
-    max-width: none !important;
-  }
-}
-
 .quick-search {
-  width: 100%;
-  max-width: 327px;
-
   a {
     color: unset;
     text-decoration: none;
